MDEV-28773 SIGSEGV in TABLE::use_all_columns, replace_roles_mapping_table

as elsewhere, it a priv table doesn't exist - skip it
only update in-memory structures